# local-token-saver

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  install.sh  pyproject.toml
.agent-mesh/: handoff.md  meta.json  tasks.json
docs/: ARCHITECTURE.md  HIGH_IMPACT_EFFICIENCY_FIXES.md  NEXT_STEPS.md  PHASE_PROGRESS.md
docs/adr/: 0001-stdlib-only-core.md  0002-sqlite-fts5-index.md  0003-pluggable-embedder.md  0004-mcp-stdio-server.md  0005-chain-proxy-shadow-first.md  0006-jsonl-counterfactual-stats.md  0007-evidence-framing.md  README.md
scripts/: benchmark_efficiency.py
src/token_saver/: __init__.py  cli.py  config.py  convert.py  embeddings_onnx.py  ignore.py  indexer.py  install.py  mcp_server.py  parsers.py  proxy.py  proxy_support.py  retrieval.py  setup_deps.py  stats.py  stats_report.py  summarize.py  vectors.py  workspace.py
tests/: test_convert.py  test_embedding_backend.py  test_indexer.py  test_install.py  test_onnx_integration.py  test_parsers.py  test_proxy.py  test_stats.py  test_token_saver.py
