[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "local-token-saver"
version = "0.3.0"
description = "Local, folder-scoped, retrieval-first context access for AI coding/document agents (Claude Code, Codex)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pypdf>=4"]

[project.optional-dependencies]
pdf = ["pypdf>=4"]  # kept for backward compat; pypdf is now a core dependency
embeddings = ["onnxruntime>=1.16", "tokenizers>=0.15"]

[project.scripts]
token-saver = "token_saver.cli:main"
token-saver-mcp = "token_saver.mcp_server:main"
token-saver-proxy = "token_saver.proxy:main"

[tool.setuptools.packages.find]
where = ["src"]
